--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,34 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 trigger:
-- main
+- main   # 👈 change this to your branch name, e.g. 'master' if needed
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
 steps:
-- task: Maven@3
+# Step 1: Checkout the repo
+- checkout: self
+
+# Step 2: Use Java 17 (change if your project needs Java 11 or 8)
+- task: UseJavaVersion@1
+  inputs:
+    versionSpec: '17'
+    jdkArchitecture: 'x64'
+
+# Step 3: Run Maven build
+- task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
-    jdkArchitectureOption: 'x64'
+    goals: 'clean install'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+    javaHomeOption: 'Path'
+    mavenOptions: '-Xmx1024m'
+    jdkVersionOption: '1.17'
+    mavenAuthenticateFeed: false
+
+# Step 4: Publish build output (optional)
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: 'target'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
